# see-sop

./: .gitignore  README.md  app.py  lambda_handler.py  pyproject.toml  requirements.txt
.github/workflows/: push_to_s3.yml
service/: main.py
service/endpoints/: mvp.py  root.py
service/models/: __init__.py
