[tool.poetry]
name = "see-sop"
version = "0.1.0"
description = ""
authors = ["DjObYtE <obaydaba96@gmail.com>"]
readme = "README.md"
packages = [{ include = "see_sop" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.1.4.231227"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
