[tool.poetry]
name = "see-sop"
version = "0.1.0"
description = ""
authors = ["DjObYtE <obaydaba96@gmail.com>"]
readme = "README.md"
packages = [{ include = "see_sop" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pandas = "^2.2.0"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"
# sqlmodel = "^0.0.14"
# alembic = "^1.13.1"
# psycopg2-binary = "^2.9.9"
mangum = "^0.17.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.1.4.231227"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
doc = "poetry run poe"
dev = "poetry run uvicorn src.app.main:app --reload"
